[package]
name = "tommo"
version = "0.1.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>"]
description = "Text-Only, Massively Multiplayer Online engine"
license = "gpl-3" # Not gpl-3-or-later
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
eyre = "0.6.8"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
