[package]
name = "tommo"
version = "0.1.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>"]
description = "Text-Only, Massively Multiplayer Online engine"
license = "agpl-3" # Not gpl-3-or-later
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "3.1.8", features = ["derive", "wrap_help"] }
color-eyre = "0.6.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
eyre = "0.6.8"
futures = "0.3.21"
mlua = { version = "0.7.4", features = ["async", "lua54", "send", "serialize"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full", "parking_lot"] }
tracing = "0.1.32"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }

[features]
